@@ -1,4 +1,9 @@
 ------------------------------------------------------
+Release 1 | Beta 0 | Development 0 | Experimental 6
+
+* Added cut, copy and paste to GUITextBox
+
+------------------------------------------------------
 Release 1 | Beta 0 | Development 0 | Experimental 5
 
 * Added ClipboardUtils
